[package]
name = "bifrost"
version = "0.3.0"
description = "Lighting controller"
authors = ["Dexter"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bifrost_lib"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]


[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27.0", features = ["full"] }
hex = "0.4.3"
erased-serde = "0.3.25"
tauri = { version = "2.0.0-beta", features = [] }
rand = "0.8.5"
colors-transform = "0.2.11"
enum_dispatch = "0.3.11"
sacn = { git = "https://github.com/macoss/sacn" }
libmdns = "0.7.5"
mdns = "3.0.0"
futures-util = "0.3.28"
phf = { version = "0.11", features = ["macros"] }
palette = "0.7.1"
tauri-plugin-shell = "2.0.0-beta.3"
